src/scss/pages/_signup.scss
.signup {

  &__mobile-heading {
    display: none;
  }

  &__form-container {
    // background: url("./assets/images/dwellingly_logo.png") no-repeat;
    background-size: contain;
    background-color: white;
    width: 300px;
    padding: 20px 30px;
    border-radius: 20px;
    box-shadow: 0 0 10px 0 rgba(black, 0.25);
    margin: auto;
    text-align: center;
  }
  &__button {
    color: white;
    background-color: $blue;
    border-radius: 20px;
    padding: 5px 10px;
    margin-top: 10px;
    border-width: 0px;
    padding: 10px 20px;
    font-weight: bold;
  }

  &__form-field {
    border: 0;
    border-bottom: 1px solid $lightGray;
    padding: 10px 10px;
    width: 250px;
    margin: 0px;
    background-color: transparent;
  }
  &__logo {
    margin-top: 40px;
    margin-bottom: 40px;
  }
  &__container {
    height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
    background-image: $gradient;
  }
  &__or_container {
    display: flex;
    justify-content: center;
    align-items: center;
    margin-top: 10px;
  }
  &__or {
    position: relative;
    width: 50%;
  }
  &__divider {
    position: absolute;
    top: 50%;
    width: 100%;
    left: 0;
    transform: translateY(-50%);
    height: 2px;
    background-color: $lightGray;
    z-index: 1;
  }
  &__or_text {
    background-color: white;
    position: relative;
    z-index: 2;
    padding: 0 20px;
    font-weight: bold;
    color: $gray;
  }
  &__account_container {
    display: flex;
    flex-direction: column;
    margin-top: 50px;
  }
  &__text_link {
    font-size: 14px;
  }
  &__account_create {
    margin-top: 10px;
    margin-bottom: 10px;
  }
}
.googleIcon{
  height: 20px;
  float: left;
}

@media (max-width: $breakpointMobile){
  
  //editing mobile form container

  .signup{


    &__form-container{
      // width: 270px;
      width: 100%;
      border-radius: 0px;
      height: 100%;
    }
    &__form-field{
      // width: 200px;
      width: 100%;
    }
    &__button{
      font-size: 12px;
      margin-top: 35px;
      background-color: #ECECEC;
      color: #D7D7D7;
    }
    &__logo {
      display: none;
    }

    &__mobile-heading {
      display: block;
      border-bottom: 1px solid #d1d1d1;
      color: #2C5F89;
      font-weight: bold;

        &__text-wrapper {
          margin-bottom: 20px;
        }
    }
  }

  .subtitle {
    display: none;
  }
}

